Fix toggle button on Firefox

--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ input {
 }
 
 .toggle {
+    white-space:nowrap;
+    margin-top: 10px;
+    margin-right: 15px;
     position: absolute;
     top: 0;
     right: 0;
